--- a/index.html
+++ b/index.html
@@ -196,10 +196,14 @@
           <h3>Created by</h3>
           <credit>Wil Voss</credit>
 
+          <h3>Dedication</h3>
+          <credit>Made with ❤️ for Sonna and Melinda.</credit>
+
           <h3>Feedback, testing, and ideas</h3>
           <credit>Lex Barbieri</credit>
           <credit>Jaime Bortello</credit>
           <credit>Summer Bronson</credit>
+          <credit>Melinda Cocolas</credit>
           <credit>Marianne Giesemann</credit>
           <credit>Perdis Hawkins</credit>
           <credit>Jerry Hoffmeister</credit>
