--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <notification :class="{show: appStateShowMeta}" class="meta">
         <header>
           <icon class="logo giant"></icon>
-          <!-- <h2>Facets</h2> -->
+          <flogo class="giant"></flogo>
         </header>
         <p>Hi, {{appDataPlayerCurrent.name}}!</p>
         <icon :class="{show: appStateIsGettingLast10Games || appStateIsGettingDailyGames || appStateIsGettingDailyGameStats || appStateIsGettingUserStats}" style="position: relative" class="spinner"></icon>
