--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.1.17" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.1.17" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.1.17" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.1.18" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.1.18" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.1.18" media="screen" />
   </head>
 
   <body>
@@ -56,10 +56,10 @@
 
         <img v-for="wordset in getEnabledWordSets" width="0px" height="0px" alt="preload image that can't be seen" :style="{backgroundImage: 'url('+ wordset.textureImage + ')'}" />
       </preload>
-      <link rel="stylesheet" v-if="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme)" href="styles/light.css?2.1.17" media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.1.17" media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.1.17" media="screen" />
-      <link rel="stylesheet" v-if="appStateUsePortraitLayout && !userSettingsShowAllCards && appDataPlayerCurrent.role !== 'creator'" href="styles/focus.css?2.1.17" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme)" href="styles/light.css?2.1.18" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.1.18" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.1.18" media="screen" />
+      <link rel="stylesheet" v-if="appStateUsePortraitLayout && !userSettingsShowAllCards && appDataPlayerCurrent.role !== 'creator'" href="styles/focus.css?2.1.18" media="screen" />
       <notification @click="appStateShowNotification = false" :class="{show: appStateShowNotification}">
         <message :title="getPlayerMessage" v-html="getPlayerMessage"></message>
       </notification>
@@ -86,9 +86,9 @@
           <button class="small" @click="ShowSettings(event)">Settings</button>
           <leftright>
             <button class="small" @click="ToggleShowInfo(event)">Credits</button>
-            <button class="small inline" @click="window.open('https://www.buymeacoffee.com/wilvoss', '_blank')">
-              Coffee!
-              <icon class="bmc extrasmall"></icon>
+            <button class="small highlightText" @click="window.open('https://www.buymeacoffee.com/wilvoss', '_blank')">
+              <icon class="bmc small highlightBackground"></icon>
+              Donate!
             </button>
           </leftright>
         </subtitle>
@@ -324,6 +324,10 @@
             </ul>
             Once you have updated your device settings, restart Facets, and then enable notifications here.
           </instructions>
+          <leftright style="margin-top: calc(2 * var(--defaultGap))">
+            <a class="padded" @click="window.location.reload()">Force refresh Facets</a>
+          </leftright>
+          <small>App version {{appDataVersion}}, hit this button to load the latest and greatest.</small>
         </section>
         <controls>
           <button class="secondary" @click="CancelSettings(event)">Cancel</button>
@@ -554,14 +558,14 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.1.17" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.1.17" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.1.17" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.1.17" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.1.17" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.1.17" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.1.17" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.1.18" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.1.18" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.1.18" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.1.18" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.1.18" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.1.18" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.1.18" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.1.17" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.1.18" type="text/javascript"></script>
   </body>
 </html>
