--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.1.21" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.1.21" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.1.21" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.1.22" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.1.22" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.1.22" media="screen" />
   </head>
 
   <body>
@@ -56,10 +56,10 @@
 
         <img v-for="wordset in getEnabledWordSets" width="0px" height="0px" alt="preload image that can't be seen" :style="{backgroundImage: 'url('+ wordset.textureImage + ')'}" />
       </preload>
-      <link rel="stylesheet" v-if="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme)" href="styles/light.css?2.1.21" media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.1.21" media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.1.21" media="screen" />
-      <link rel="stylesheet" v-if="appStateUsePortraitLayout && !userSettingsShowAllCards && appDataPlayerCurrent.role !== 'creator'" href="styles/focus.css?2.1.21" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme)" href="styles/light.css?2.1.22" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.1.22" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.1.22" media="screen" />
+      <link rel="stylesheet" v-if="appStateUsePortraitLayout && !userSettingsShowAllCards && appDataPlayerCurrent.role !== 'creator'" href="styles/focus.css?2.1.22" media="screen" />
       <notification @click="appStateShowNotification = false" :class="{show: appStateShowNotification}">
         <message :title="getPlayerMessage" v-html="getPlayerMessage"></message>
       </notification>
@@ -118,49 +118,28 @@
       <modal v-if="appStateShowTutorial" class="tutorial">
         <section>
           <h2>How to play</h2>
-          <p>In the game of Facets, you are either <span class="blueText">creating</span> a word puzzle to send to your friends or <span class="greenText">guessing</span> the solution to a word puzzle that a friend sent to you.</p>
-
-          <hider v-if="!appStateIsGuessing">
-            <h3>Creating</h3>
-            <p>When creating a new puzzle, it's your job to come up with single-word clues that "connect" the four word-pairs that are displayed on the edges of a gem.</p>
-            <p>Anatomy of a puzzle:</p>
-            <img :src="'./images/tut-7' + (userSettingsUsesLightTheme ? '-light' : '') + '.svg'" />
-            <p>When you are satisfied with your 4 clues, hit the <cta>{{appDataActionButtonTexts.send}}</cta> button. The puzzle will scramble and you'll be able to share a message with your friend that contains a link to the scrambled puzzle.</p>
-            <p>They're gonna have to recreate your puzzle based on your clues! 🧠</p>
-          </hider>
+          <p>In the game of Facets, you are either <span class="greenText">guessing</span> the solution to a word puzzle that a friend sent to you or <span class="blueText">creating</span> a word puzzle to send to your friends.</p>
 
           <h3>Guessing</h3>
-          <hider v-if="!getIsAIGenerated && !appStateForceAutoCheck">
-            <p>When your friend created this word puzzle, they were given word-pairs that they had to "connect" by coming up with a clue that works for both words in each word-pair.</p>
-            <p class="greenText">It's your job to figure out what word-pairs they were given based on the clues they came up with.</p>
-          </hider>
-          <hider v-if="getIsAIGenerated">
-            <p>Right now, you are attempting to solve a word puzzle that our AI created. It was given word-pairs that it had to "connect" by coming up with a clue that works for both words in each word-pair.</p>
-            <p class="greenText">It's your job to figure out what word-pairs it was given based on the clues it came up with.</p>
-          </hider>
-          <hider v-if="appStateForceAutoCheck && !getIsAIGenerated">
-            <p>Right now, you are solving a word puzzle that another, anonymous player created. They were given word-pairs that they had to "connect" by coming up with a clue that works for both words in each word-pair.</p>
-            <p class="greenText">It's your job to figure out what word-pairs they were given based on the clues they came up with.</p>
-          </hider>
-          <p>Drag cards onto the tray and rotate them until you think you've solved the puzzle!</p>
+          <p>When your friend created their puzzle, they are given word-pairs they had to "connect" with a clue that worked for both words in each word-pair.</p>
+          <p class="greenText">It's your job to figure out what word-pairs they were given based on the clues they came up with.</p>
           <p>Anatomy of a solved puzzle:</p>
           <img :src="'./images/tut-6' + (userSettingsUsesLightTheme ? '-light' : '') + '.svg'" />
-          <p v-if="!getIsAIGenerated && !appStateForceAutoCheck">Click the <cta>{{appDataActionButtonTexts.check}}</cta> button to send your guess back to whoever sent it to you.</p>
-          <p v-if="getIsAIGenerated || appStateForceAutoCheck">Click the <cta>{{appDataActionButtonTexts.guess}}</cta> button to automatically check your guess.</p>
+          <p>Drag cards onto the tray and rotate them until you think you've solved the puzzle! When you think you have the right cards in the right place, hit the <cta>{{appDataActionButtonTexts.reply}}</cta> button to send your guess back to them.</p>
+          <p>If you're solving The Daily puzzle, hit the <cta>{{appDataActionButtonTexts.guess}}</cta> button to automatically check your guess.</p>
 
-          <hider v-if="appStateIsGuessing">
-            <h3>Creating</h3>
-            <p>When creating a new puzzle, it's your job to come up with clues that "connect" the four word-pairs that are displayed on the edges of a gem.</p>
-            <p>Anatomy of a puzzle:</p>
-            <img :src="'./images/tut-7' + (userSettingsUsesLightTheme ? '-light' : '') + '.svg'" />
-            <p>When you are satisfied with your 4 clues, hit the <cta>{{appDataActionButtonTexts.send}}</cta> button. The puzzle will scramble and you'll be able to share a message with your friend that contains a link to the scrambled puzzle.</p>
-            <p>They're gonna have to recreate your puzzle based on your clues! 🧠</p>
-          </hider>
+          <h3>Creating</h3>
+          <p>When creating a new puzzle, it's your job to come up with clues that "connect" the four word-pairs that are displayed on the edges of the gem.</p>
+          <p>Anatomy of a puzzle:</p>
+          <img :src="'./images/tut-7' + (userSettingsUsesLightTheme ? '-light' : '') + '.svg'" />
+          <p>When you are satisfied with your 4 clues, hit the <cta>{{appDataActionButtonTexts.send}}</cta> button. The puzzle will scramble and you'll be able to share a message with your friend that contains a link to the scrambled puzzle.</p>
+          <p>They're gonna have to recreate your puzzle based on your clues! 🧠</p>
 
           <h3>Reviewing</h3>
           <p>Your friends will send their guesses back to you for review. When reviewing, remove incorrectly placed cards from the gem.</p>
           <img :src="'./images/tut-4' + (userSettingsUsesLightTheme ? '-light' : '') + '.svg'" />
           <p>Click the <cta>{{appDataActionButtonTexts.respond}}</cta> button to send the puzzle back, even if you are just giving them the solution.</p>
+
           <h3>Controls</h3>
           <p>A card is a group of four words around the edges of a small outlined square.</p>
           <p>You can drag cards from one spot to another spot. While guessing or reviewing, you can rotate the cards by tapping on the curved arrows in the corner of each card.</p>
@@ -202,7 +181,7 @@
           <h3>Dedication</h3>
           <credit>Made with ❤️ for Sonna and Melinda.</credit>
 
-          <h3>Feedback, testing, and ideas</h3>
+          <h3>Feedback & ideas</h3>
           <credit>Lex Barbieri</credit>
           <credit>Jaime Bortello</credit>
           <credit>Summer Bronson</credit>
@@ -378,25 +357,25 @@
           </message>
           <icon v-show="appStateIsGettingDailyGames" style="position: relative" class="spinner show"></icon>
           <gamelinks>
-            <gamelink @click="HandleOldGameClick(event, game)" :class="{done: game.solved, quit: game.quit}" v-for="(game, index) in getDailyGamesWithWordSetNames">
+            <gamelink @click="HandleGameLinkClick(event, game)" :class="{done: game.solved, quit: game.quit}" v-for="(game, index) in getDailyGamesWithWordSetNames">
               <p>
                 <a>
                   <small>
                     <dot v-if="index === 0 && getTodaysDaily !== getCurrentDaily && game.guesses === 0 && getDailyIsFreshToday || game.guesses === 0 && !HasUserStartedGame(game)">•</dot>
-                    <icon v-if="game.solved" class="share tiny"></icon>
+                    <icon v-if="game.solved" class="eye tiny highlightBackground"></icon>
                     {{game.date}}
                   </small>
-                  {{game.hints.replace(/:/g," - ")}}
+                  <clues> {{game.hints.replace(/:/g," - ")}} </clues>
                 </a>
                 <button v-if="game.guesses === 0" class="inline report">
                   PLAY
                   <icon class="play"></icon>
                 </button>
-                <button @click="HandleSolvedPuzzleButtonClick(event, game)" v-if="game.solved && game.guesses > 0 && !game.quit" class="inline report">
+                <button v-if="game.solved && game.guesses > 0 && !game.quit" class="inline report">
                   <icon class="check"></icon>
                   In {{game.guesses}}
                 </button>
-                <button @click="HandleSolvedPuzzleButtonClick(event, game)" v-if="game.solved && game.guesses > 0 && game.quit" class="inline report">
+                <button v-if="game.solved && game.guesses > 0 && game.quit" class="inline report">
                   <icon class="quit alertbackground"></icon>
                   In {{game.guesses}}
                 </button>
@@ -558,14 +537,14 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.1.21" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.1.21" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.1.21" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.1.21" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.1.21" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.1.21" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.1.21" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.1.22" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.1.22" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.1.22" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.1.22" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.1.22" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.1.22" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.1.22" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.1.21" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.1.22" type="text/javascript"></script>
   </body>
 </html>
