--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.1.22" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.1.22" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.1.22" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.1.23" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.1.23" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.1.23" media="screen" />
   </head>
 
   <body>
@@ -56,10 +56,10 @@
 
         <img v-for="wordset in getEnabledWordSets" width="0px" height="0px" alt="preload image that can't be seen" :style="{backgroundImage: 'url('+ wordset.textureImage + ')'}" />
       </preload>
-      <link rel="stylesheet" v-if="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme)" href="styles/light.css?2.1.22" media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.1.22" media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.1.22" media="screen" />
-      <link rel="stylesheet" v-if="appStateUsePortraitLayout && !userSettingsShowAllCards && appDataPlayerCurrent.role !== 'creator'" href="styles/focus.css?2.1.22" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme)" href="styles/light.css?2.1.23" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.1.23" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.1.23" media="screen" />
+      <link rel="stylesheet" v-if="appStateUsePortraitLayout && !userSettingsShowAllCards && appDataPlayerCurrent.role !== 'creator'" href="styles/focus.css?2.1.23" media="screen" />
       <notification @click="appStateShowNotification = false" :class="{show: appStateShowNotification}">
         <message :title="getPlayerMessage" v-html="getPlayerMessage"></message>
       </notification>
@@ -121,7 +121,7 @@
           <p>In the game of Facets, you are either <span class="greenText">guessing</span> the solution to a word puzzle that a friend sent to you or <span class="blueText">creating</span> a word puzzle to send to your friends.</p>
 
           <h3>Guessing</h3>
-          <p>When your friend created their puzzle, they are given word-pairs they had to "connect" with a clue that worked for both words in each word-pair.</p>
+          <p>When your friend created their puzzle, they were given word-pairs they had to "connect" with a clue that worked for both words in each word-pair.</p>
           <p class="greenText">It's your job to figure out what word-pairs they were given based on the clues they came up with.</p>
           <p>Anatomy of a solved puzzle:</p>
           <img :src="'./images/tut-6' + (userSettingsUsesLightTheme ? '-light' : '') + '.svg'" />
@@ -537,14 +537,14 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.1.22" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.1.22" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.1.22" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.1.22" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.1.22" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.1.22" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.1.22" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.1.23" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.1.23" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.1.23" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.1.23" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.1.23" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.1.23" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.1.23" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.1.22" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.1.23" type="text/javascript"></script>
   </body>
 </html>
