--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta name="keywords" content="Facets, Facets!, Big Tent Games, Games, Casual game, Puzzle game, Word game, Boardgame, Wil Voss" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.1.61" />
+    <link rel="manifest" href="manifest.webmanifest?2.1.62" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -36,9 +36,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.1.61" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.1.61" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.1.61" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.1.62" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.1.62" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.1.62" media="screen" />
   </head>
 
   <body>
@@ -56,10 +56,10 @@
 
         <img v-for="wordset in getEnabledWordSets" width="0px" height="0px" alt="preload image that can't be seen" :style="{backgroundImage: 'url('+ wordset.textureImage + ')'}" />
       </preload>
-      <link rel="stylesheet" v-if="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme)" href="styles/light.css?2.1.61" media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.1.61" media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.1.61" media="screen" />
-      <link rel="stylesheet" v-if="appStateUsePortraitLayout && !userSettingsShowAllCards && appDataPlayerCurrent.role !== 'creator'" href="styles/focus.css?2.1.61" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme)" href="styles/light.css?2.1.62" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.1.62" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.1.62" media="screen" />
+      <link rel="stylesheet" v-if="appStateUsePortraitLayout && !userSettingsShowAllCards && appDataPlayerCurrent.role !== 'creator'" href="styles/focus.css?2.1.62" media="screen" />
       <notification @click="appStateShowNotification = false" :class="{show: appStateShowNotification}">
         <message :title="getPlayerMessage" v-html="getPlayerMessage"></message>
       </notification>
@@ -71,18 +71,18 @@
         <p>Hi, {{appDataPlayerCurrent.name}}!</p>
         <icon :class="{show: appStateIsGettingLast10Games || appStateIsGettingDailyGames || appStateIsGettingDailyGameStats || appStateIsGettingUserStats}" style="position: relative" class="spinner"></icon>
         <subtitle>
-          <button class="inline small main" @click="HandleNewGameClick()">
-            <icon class="empty"></icon>
-            Create A Puzzle!
-            <icon class="empty"></icon>
-          </button>
-          <button v-if="getNumberOfHintsThatHaveBeenFilled !== 0 && currentGameSolutionGuessing !== currentGameSolutionActual" class="small highlightText" @click="ToggleShowMeta(event)">Continue {{getResumeText}}</button>
+          <button v-if="currentGameSolutionGuessing !== currentGameSolutionActual" class="small highlightText" @click="ToggleShowMeta(event)">Resume</button>
           <button v-if="vsShowDaily" class="small" @click="ToggleShowDailyGames(event)">
-            The Daily
+            The Daily Facet
             <badge :class="{show: getDailyIsFreshToday}">{{appDataNumberOfNewDailies}}</badge>
           </button>
-          <button class="small" @click="ToggleShowGlobalCreated(event)">Player Puzzles</button>
-          <button class="small" @click="ToggleShowTutorial(event)">How To Play</button>
+          <button class="inline small" @click="HandleNewGameClick()">
+            <icon class="empty"></icon>
+            Create your own
+            <icon class="empty"></icon>
+          </button>
+          <button class="small" @click="ToggleShowGlobalCreated(event)">Recent puzzles</button>
+          <button class="small" @click="ToggleShowTutorial(event)">How to play</button>
           <button class="small" @click="ShowSettings(event)">Settings</button>
           <leftright>
             <button class="small" @click="ToggleShowInfo(event)">Credits</button>
@@ -93,44 +93,18 @@
           </leftright>
         </subtitle>
       </notification>
-      <modal v-if="appStateShowOOBE || appStateShowIntro" class="tutorial">
-        <h2>How To Play</h2>
-        <section v-if="appStateIsGuessing">
-          <p>{{appDataPlayerCurrent.name}}, when your friend created this word puzzle, they were given word-pairs that they had to "connect" by coming up with a clue that works for both words in each word-pair.</p>
-          <p class="greenText">It's your job to figure out what word-pairs they were given based on the clues they came up with.</p>
-          <p>Place cards onto the tray and rotate them until you think you've solved the puzzle!</p>
-          <p>Anatomy of a solved puzzle:</p>
-          <img :src="'./images/tut-6' + (userSettingsUsesLightTheme ? '-light' : '') + '.svg'" />
-          <p>Click the <cta>{{ appDataActionButtonTexts.check}}</cta> button to send your guess back to whoever sent it to you.</p>
-        </section>
-        <section v-if="!appStateIsGuessing">
-          <p>{{appDataPlayerCurrent.name}}, you are about to create a word puzzle that you will send to your friends via text, email or social media.</p>
-          <p class="blueText">It's your job to come up with single-word clues that "connect" the four word-pairs (or Emoji-pairs) that are displayed on the edges of a gem.</p>
-          <p>Anatomy of a puzzle:</p>
-          <img :src="'./images/tut-7' + (userSettingsUsesLightTheme ? '-light' : '') + '.svg'" />
-          <p>When you are satisfied with your 4 clues, hit the <cta>{{appDataActionButtonTexts.send}}</cta> button. The puzzle will scramble and you'll be able to share a message with your friend that contains a link to the scrambled puzzle.</p>
-          <p>They're gonna have to recreate your puzzle based on your clues! 🧠</p>
-        </section>
-        <section>
-          <controls><button @click="appStateShowOOBE = false;">Got it</button></controls>
-        </section>
-      </modal>
       <modal v-if="appStateShowTutorial" class="tutorial">
         <section>
           <h2>How to play</h2>
-          <p>In the game of Facets, you are either <span class="greenText">guessing</span> the solution to a word puzzle that a friend sent to you or <span class="blueText">creating</span> a word puzzle to send to your friends.</p>
+          <p>A Facets puzzle consists of 4 different <span class="highlightText">clues</span> that connect 4 different <span class="highlightText">word-pairs</span>.</p>
 
           <h3>Guessing</h3>
-          <p>When your friend created their puzzle, they were given word-pairs they had to "connect" with a clue that worked for both words in each word-pair.</p>
-          <p class="greenText">It's your job to figure out what word-pairs they were given based on the clues they came up with.</p>
-          <p>Anatomy of a solved puzzle:</p>
+          <p>Find the right word-pairs based on the clues given. Drag cards onto the gem and rotate them until you think you've solved the puzzle!</p>
           <img :src="'./images/tut-6' + (userSettingsUsesLightTheme ? '-light' : '') + '.svg'" />
-          <p>Drag cards onto the tray and rotate them until you think you've solved the puzzle! When you think you have the right cards in the right place, hit the <cta>{{appDataActionButtonTexts.reply}}</cta> button to send your guess back to them.</p>
-          <p>If you're solving The Daily puzzle, hit the <cta>{{appDataActionButtonTexts.guess}}</cta> button to automatically check your guess.</p>
+          <p>Hit the <cta>{{appDataActionButtonTexts.guess}}</cta> or <cta>{{appDataActionButtonTexts.reply}}</cta> button to check your solution.</p>
 
           <h3>Creating</h3>
           <p>When creating a new puzzle, it's your job to come up with clues that "connect" the four word-pairs that are displayed on the edges of the gem.</p>
-          <p>Anatomy of a puzzle:</p>
           <img :src="'./images/tut-7' + (userSettingsUsesLightTheme ? '-light' : '') + '.svg'" />
           <p>When you are satisfied with your 4 clues, hit the <cta>{{appDataActionButtonTexts.send}}</cta> button. The puzzle will scramble and you'll be able to share a message with your friend that contains a link to the scrambled puzzle.</p>
           <p>They're gonna have to recreate your puzzle based on your clues! 🧠</p>
@@ -139,12 +113,6 @@
           <p>Your friends will send their guesses back to you for review. When reviewing, remove incorrectly placed cards from the gem.</p>
           <img :src="'./images/tut-4' + (userSettingsUsesLightTheme ? '-light' : '') + '.svg'" />
           <p>Click the <cta>{{appDataActionButtonTexts.respond}}</cta> button to send the puzzle back, even if you are just giving them the solution.</p>
-
-          <h3>Controls</h3>
-          <p>A card is a group of four words around the edges of a small outlined square.</p>
-          <p>You can drag cards from one spot to another spot. While guessing or reviewing, you can rotate the cards by tapping on the curved arrows in the corner of each card.</p>
-          <img src="./images/rotator-icon.svg" />
-          <p>The gem has 4 large clues around its edges. At any time, you can tap on a clue or either of the two large curved arrows above the gem to rotate it.</p>
         </section>
         <controls><button @click="ToggleShowTutorial(event)">Got it</button></controls>
       </modal>
@@ -224,7 +192,6 @@
             <p>Selected</p>
             <select v-model="tempUserSettingsLanguage">
               <option v-for="option in getEnabledTempLanguages" :key="option.tag" :value="option.tag">{{ option.name }}</option>
-              <option disabled>More coming!</option>
             </select>
           </leftright>
           <h3>Difficulty</h3>
@@ -318,8 +285,8 @@
       </modal>
       <modal v-if="appStateShowGlobalCreated">
         <section>
-          <h2>Player Puzzles</h2>
-          <p>Play the most recent puzzles created by anonymous players from around the world.</p>
+          <h2>Recent puzzles</h2>
+          <p>Play the most recent puzzles created by players from around the world.</p>
 
           <leftright style="margin: 20px 0">
             <a class="padded" :class="{disabled: appStateIsGettingLast10Games}" @click="GetLast10GlobalCreatedGames();">Refresh</a>
@@ -350,8 +317,8 @@
       </modal>
       <modal v-if="appStateShowDailyGames">
         <section>
-          <h2>The Daily</h2>
-          <p>It's tricky to guess how an AI thinks! These AI-generated Daily puzzles can be quite challenging!</p>
+          <h2>The Daily Facet</h2>
+          <p>These AI-solved puzzles can be quite hard. If you solve one, challenge your friends to do better!</p>
 
           <h3 v-show="appStateIsGettingDailyGames">Past 10 days</h3>
           <message style="padding: calc(2 * var(--defaultGap)) 0" v-if="!appStateIsGettingDailyGames && getDailyGamesWithWordSetNames.length === 0">
@@ -432,7 +399,7 @@
             <count v-if="getCurrentDaily && getCurrentDaily.solved"> in {{getCurrentDaily.guesses}} {{getCurrentDaily.guesses !== 1 ? 'tries' : 'try'}} </count>
             <count v-if="getCurrentDaily && !getCurrentDaily.solved"> Daily </count>
           </span>
-          <button @click="HandleOldGameClick(event, getTodaysDaily)" class="dailycta" :class="{show: !appStateShowNotification && vsShowDaily && getDailyIsFreshToday && appStateShowMeta}">Start Today's Daily!</button>
+          <button @click="HandleOldGameClick(event, getTodaysDaily)" class="dailycta" :class="{show: !appStateShowNotification && vsShowDaily && getDailyIsFreshToday && appStateShowMeta}">Solve Today's Facet!</button>
         </header>
         <controls :class="{disabled: getActionButtonState}">
           <button id="shareButton" class="inline" @click="HandleSubmitButtonPress()">
@@ -541,14 +508,14 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.1.61" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.1.61" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.1.61" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.1.61" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.1.61" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.1.61" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.1.61" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.1.62" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.1.62" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.1.62" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.1.62" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.1.62" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.1.62" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.1.62" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.1.61" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.1.62" type="text/javascript"></script>
   </body>
 </html>
