--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               <value>
                 {{!appStateIsGettingDailyGameStats && getCurrentDaily.stats && getCurrentDaily.stats.avg ? getCurrentDaily.stats.avg : '-'}}
               </value>
-              <small>avg. tries</small>
+              <small>tries avg</small>
             </stat>
             <stat>
               <value>
