--- a/index.html
+++ b/index.html
@@ -317,7 +317,8 @@
                 maxlength="8" />
             </callout>
           </leftright>
-          <small class="alertText" v-if="tempID.toString().length !== 8">Your ID must be 8 numbers long.</small>
+          <small class="alertText" v-if="tempID.toString().length !== 8 || tempID.toString().indexOf('0') === 0">Your ID
+            must be 8 numbers long and not begin with 0.</small>
           <small>To avoid connection issues when sharing game stats across different devices, ensure this Player ID
             matches
             on all your browsers. Write this ID down before changing it.</small>
@@ -395,8 +396,10 @@
         </section>
         <controls>
           <button class="secondary" @click="CancelSettings(event)">Cancel</button>
-          <button :disabled="tempID.toString().length !== 8" title="Please only use numbers."
-            :class="{disabled: tempID.toString().length !== 8}" @click="SubmitSettings(event)">Save</button>
+          <button :disabled="tempID.toString().length !== 8 || tempID.toString().indexOf('0') === 0"
+            title="Please only use numbers."
+            :class="{disabled: tempID.toString().length !== 8 || tempID.toString().indexOf('0') === 0}"
+            @click="SubmitSettings(event)">Save</button>
         </controls>
       </modal>
       <modal v-if="appStateShowGlobalCreated">
@@ -769,7 +772,7 @@
     <script src="models/CardObject.min.js?2.2.06" type="text/javascript"></script>
     <script src="models/PlayerObject.min.js?2.2.06" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.06" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.07" type="text/javascript"></script>
   </body>
 
 </html>
