--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
           <h3 v-if="!appStateShowCreateOOBE">Creating</h3>
           <p>When creating a new puzzle, it's your job to come up with clues that "connect" the four word-pairs that are
-            displayed on the edges of the gem. These characters are not allowed: ? : = and &</p>
+            displayed on the edges of the gem. (These characters are not allowed: ? : = and &)</p>
           <img :src="'./images/tut-7' + (userSettingsUsesLightTheme ? '-light' : '') + '.svg'" />
           <p>When you are satisfied with your 4 clues, hit the <cta>{{appDataActionButtonTexts.send}}</cta> button. The
             puzzle will scramble and you'll be able to share a message with your friend that contains a link to the
